--- a/service.yml
+++ b/service.yml
@@ -15,11 +15,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gke-test-service
+  name: py-test-service
+  annotations:
+    cloud.google.com/neg: '{"ingress": true}'
 spec:
   type: LoadBalancer
   ports:
     - port: 80
-      targetPort: 5000
+      targetPort: 80
   selector:
-    app: gke-test
+    app: py-test
