--- a/service.yml
+++ b/service.yml
@@ -12,16 +12,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: v1
-kind: Service
-metadata:
-  name: py-test-service
-  annotations:
-    cloud.google.com/neg: '{"ingress": true}'
-spec:
-  type: LoadBalancer
-  ports:
-    - port: 80
-      targetPort: 80
-  selector:
-    app: py-test
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: py-test-service
+#   annotations:
+#     cloud.google.com/neg: '{"ingress": true}'
+# spec:
+#   type: LoadBalancer
+#   ports:
+#     - port: 80
+#       targetPort: 80
+#   selector:
+#     app: py-test
