--- a/kustomization.yml
+++ b/kustomization.yml
@@ -15,5 +15,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- deployment.yml
-- service.yml
+  - deployment.yml
+  - service.yml
+  - ingress.yml
